--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -101,6 +101,10 @@ main {
     margin: 0 auto;
 }
 
+main section {
+    margin-top: 130px;
+}
+
 /* about section styles */
 .about {
     padding: 130px;
@@ -136,10 +140,50 @@ main {
 }
 
 .info-description {
- color: var(--Dark-02, #090909);
-font-family: Open Sans;
-font-size: 20px;
-font-style: normal;
-font-weight: 700;
-line-height: 30px;
+    color: var(--Dark-02, #090909);
+    font-family: Open Sans;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 30px;
+}
+
+/* what secton start */
+
+
+.what-description {
+    padding: 30px 230px;
+    text-align: center;
+    font-weight: 400;
+
+}
+
+/* skills related style */
+.skills-container {
+    display: flex;
+    gap: 24px;
+    margin: 0 230px;
+
+
+}
+
+.skill {
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+.skill-description {
+    padding: 30px 10px;
+}
+
+/* resume */
+.resume-column-title {
+    color:  #474747;
+    font-size: 30px;
+    font-weight: 700;
+}
+.resume-container{
+    margin-left: 230px;
 }
