--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -180,10 +180,82 @@ main section {
 
 /* resume */
 .resume-column-title {
-    color:  #474747;
+    color: #474747;
     font-size: 30px;
     font-weight: 700;
+
 }
-.resume-container{
-    margin-left: 230px;
+
+.resume-container {
+    margin: 0 230px 0 230px;
+    display: flex;
+    gap: 70px;
+    padding: 130px;
+
+}
+
+.resume-container hr {
+    margin: 30px;
+}
+
+.resume-item-title {
+    margin-bottom: 10px;
+}
+
+.resume-item-institute {
+    color: var(--Dark-03, #757575);
+    font-family: Open Sans;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    margin-bottom: 20px;
+    margin-top: 0px;
+}
+
+.resume-item-describsion {
+    color: var(--Dark-03, #757575);
+    font-family: Open Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px;
+    /* 175% */
+}
+
+.download-cv {
+    text-align: center;
+    margin-top: 5px;
+}
+
+/* footer */
+footer {
+    display: flex;
+    justify-content: space-around;
+    background: #FFF8F3;
+    padding: 130px 200px;
+
+}
+.socal-link{
+    margin-right: 25px;
+}
+
+.section-describsition {
+    width: 562px;
+}
+
+.contact input,
+textarea {
+    display: block;
+    margin-bottom: 24px;
+    border-radius: 5px;
+    background: var(--White-Color, #FFF);
+    padding: 18px 35px;
+    border: 0;
+    color: #757575;
+}
+
+.contact input,textarea {
+
+    width: 461px;
 }
