--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -61,6 +61,9 @@ header {
     background-image: url('/images/header_bg.png');
     background-repeat: no-repeat;
     background-position: bottom right;
+    background-image: url('/images/developer.png');
+    background-position: top left;
+
 }
 
 .banner {
