--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -58,10 +58,10 @@ nav a {
 /* header related style */
 header {
     background: #FFF8F3;
-    background-image: url('/images/header_bg.png');
+    background-image: url('../images/header_bg.png');
     background-repeat: no-repeat;
     background-position: bottom right;
-    background-image: url('/images/developer.png');
+    background-image: url('../images/developer.png');
     background-position: top left;
 
 }
